--- a/笔记/Redis设计与实现/第二部分：单机数据库的实现/第13章.客户端.md
+++ b/笔记/Redis设计与实现/第二部分：单机数据库的实现/第13章.客户端.md
@@ -29,6 +29,7 @@ struct redisServer {
 
 ## 客户端属性
 客户端状态包含的属性可以分两类：
+
 - 一类是比较通用的属性，这些属性很少与特定功能相关，无论客户端执行的是什么工作，它们都要用到这些属性
 - 另外一类是和特定功能相关的属性，比如操作数据库时需要用到的db属性和dictid属性，执行事务时需要用到的mstate属性，以及执行watch命令时需要用到的watched_keys属性等等
 
@@ -44,6 +45,7 @@ typedef struct redisClient {
 ```
 
 根据客户端类型的不同，fd属性的值可以是-1或大于-1的整数
+
 - 伪客户端的fd属性是-1；伪客户端处理的命令请求来源于AOF文件或者Lua脚本，而不是网络，所以这种客户端不需要套接字链接，自然也就不需要记录套接字描述符。目前redis在两个地方用到伪客户端，一个用于载入AOF文件并还原数据库状态，而另一个则用于执行Lua脚本中包含的redis命令。
 - 普通客户端的fd属性的值大于-1的整数：普通客户端使用套接字来与服务器进行通信，所以服务器会用fd属性来记录客户端套接字的描述符。
 
@@ -72,13 +74,17 @@ typedef struct redisClient {
 
 } redisClient;
 ```
+
 flags 属性的值可以是单个标志：
 
-flags = <flag>
+`flags = <flag>`
+
 也可以是多个标志的二进制或， 比如：
 
-flags = <flag1> | <flag2> | ...
+`flags = <flag1> | <flag2> | ...`
+
 每个标志使用一个常量表示， 一部分标志记录了客户端的角色：
+
 - 在主从服务器进行复制操作时， 主服务器会成为从服务器的客户端， 而从服务器也会成为主服务器的客户端。 REDIS_MASTER 标志表示客户端代表的是一个主服务器， REDIS_SLAVE 标志表示客户端代表的是一个从服务器。
 - REDIS_PRE_PSYNC 标志表示客户端代表的是一个版本低于 Redis 2.8 的从服务器， 主服务器不能使用 PSYNC 命令与这个从服务器进行同步。 这个标志只能在 REDIS_SLAVE 标志处于打开状态时使用。
 - REDIS_LUA_CLIENT 标识表示客户端是专门用于处理 Lua 脚本里面包含的 Redis 命令的伪客户端。
@@ -130,6 +136,7 @@ SET key value
 
 ### 命令与命令参数
 在服务器将客户端发送的命令请求保存到客户端状态的 querybuf 属性之后， 服务器将对命令请求的内容进行分析， 并将得出的命令参数以及命令参数的个数分别保存到客户端状态的 argv 属性和 argc 属性：
+
 ```c
 typedef struct redisClient {
 
@@ -143,6 +150,7 @@ typedef struct redisClient {
 
 } redisClient;
 ```
+
 argv 属性是一个数组， 数组中的每个项都是一个字符串对象： 其中 argv[0] 是要执行的命令， 而之后的其他项则是传给命令的参数。
 
 argc 属性则负责记录 argv 数组的长度。
@@ -160,6 +168,7 @@ argc 属性则负责记录 argv 数组的长度。
 
 当程序在命令表中成功找到 argv[0] 所对应的 redisCommand 结构时， 它会将客户端状态的 cmd 指针指向这个结构：
 
+```c
 typedef struct redisClient {
 
     // ...
@@ -169,13 +178,14 @@ typedef struct redisClient {
     // ...
 
 } redisClient;
+```
 之后， 服务器就可以使用 cmd 属性所指向的 redisCommand 结构， 以及 argv 、 argc 属性中保存的命令参数信息， 调用命令实现函数， 执行客户端指定的命令。
 
 图 13-7 演示了服务器在 argv[0] 为 "SET" 时， 查找命令表并将客户端状态的 cmd 指针指向目标 redisCommand 结构的整个过程。
 
 ![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1594256223_20200709085315391_554688542.png)
 
-针对命令表的查找操作不区分输入字母的大小写， 所以无论 argv[0] 是 "SET" 、 "set" 、或者 "SeT ， 等等， 查找的结果都是相同的。
+针对命令表的查找操作不区分输入字母的大小写， 所以无论 argv[0] 是 "SET" 、 "set" 、或者 "SeT" ， 等等， 查找的结果都是相同的。
 
 
 ### 输出缓冲区
@@ -222,6 +232,7 @@ typedef struct redisClient {
 
 } redisClient;
 ```
+
 通过使用链表来连接多个字符串对象， 服务器可以为客户端保存一个非常长的命令回复， 而不必受到固定大小缓冲区 16 KB 大小的限制。
 
 图 13-9 展示了一个包含三个字符串对象的 reply 链表。
@@ -230,6 +241,7 @@ typedef struct redisClient {
 
 ### 身份验证
 客户端状态的 authenticated 属性用于记录客户端是否通过了身份验证：
+
 ```c
 typedef struct redisClient {
 
@@ -241,6 +253,7 @@ typedef struct redisClient {
 
 } redisClient;
 ```
+
 如果 authenticated 的值为 0 ， 那么表示客户端未通过身份验证； 如果 authenticated 的值为 1 ， 那么表示客户端已经通过了身份验证。
 
 举个例子， 对于一个尚未进行身份验证的客户端来说， 客户端状态的 authenticated 属性将如图 13-10 所示。
