--- a/笔记/高性能mysql笔记/7.mysql高级特性.md
+++ b/笔记/高性能mysql笔记/7.mysql高级特性.md
@@ -220,12 +220,24 @@ mysql允许通过触发器，存储过程，函数的形式来存储代码，从
 ### mysql如何使用字符集
 每种字符集都可能有多种校对规则，并且都有一个默认的校对规则。
 
+MySQL的设置可以分为两类：`创建对象的时的默认值`， `在服务器和客户端通信时的设置`。
+
+1. 创建对象时的默认值：
+    1. 创建数据库的时候，将根据服务器上的character_set_server设置来设定该数据库的默认字符集
+    2. 创建表的时候，将根据数据库的字符集设置这个表的字符集设置
+    3. 创建列的时候，将根据表的设置指定列的字符集设置。
+2. 服务器和客户端通信时的设置
+    1. 服务器端总是假设客户端是按照 character_set_client 设置的字符来传输数据和SQL语句的。
+    2. 当服务器收到客户端的SQL 语句时，它先将其转换成字符集 character_set_connection，它还使用这个设置来决定如何将数据转换成字符串。
+    3. 当服务器端返回数据或者错误给客户端时，它会将其转换成 character_set_result。
+    ![客户端和服务器的字符集](_v_images/20210731170943281_813179103.png)
+
 ## 查询缓存
 mysql查询缓存保存查询返回的完整结果，当查询命中该缓存，mysql会立即返回结果，跳过了解析，优化和执行阶段。
 
 查询缓存系统会跟踪查询中涉及的每个表，如果这些表发生变化，那么和这个表相关的所有的缓存数据都将失效。
 
-查询缓存对应用程序是完全透明的。
+查询缓存对应用程序是完全透明的。应用程序无需关心MySQL是通过查询缓存返回的结果还是实际执行返回的结果。
 
 ### mysql如何判断缓存命中
 mysql判断存换命中的方法很简单，缓存存放在一个引用表中，通过一个哈希值引用，这个哈希值包括了如下因素：查询本身，当前要查询的数据库，客户端协议的版本以及一些其他可能影响返回结果的信息。
@@ -241,3 +253,19 @@ mysql判断存换命中的方法很简单，缓存存放在一个引用表中，
 * 这对写操作也会有影响，因为当向某个表写入数据的时候，mysql必须将对应表的所有存换都设置失效。如果查询缓存非常大或者碎片很多，这个操作就可能会带来很大的系统开销。
 
 如果查询缓存使用了很大量的内存，缓存失效操作就可能称为一个非常严重的问题瓶颈。如果缓存中存放了大量的查询结果，那么缓存失效操作时整个系统都可能会僵死一会儿。
+
+## 总结
+- 分区表：
+    分区表是一种粗粒度的，简易的索引策略，适用于大数据量的过滤场景。最适合的场景是，在没有合适的索引时，对其中几个分区进行全表扫描，或者是只有一个分区和索引是热点，而且这个分区和索引能够都在内存中限制单表分区数不要超过150个，并且注意某些导致无法作分区过滤的细节，分区表对于单条记录的查询并没有什么优势，需要注意这类查询的性能。
+- 视图：
+    对好几个表的复杂查询，使用视图有时候会大大简化问题，当视图使用临时表时，无法将where条件下推到各个具体的表，也不能使用任何索引，需要特别注意这类查询的性能。如果为了便利，使用视图是很合适的。
+- 外键：
+    外键限制会将约束放到MySQL中，这对于必须维护外键的场景，性能会更高。不过这也会带来额外的复杂性和额外的性能消耗，还会增加多表之间的交互，会导致系统中更多的锁和竞争。外键可以被看作是一个确保系统完整性的额外的特性，但是如果设计的是一个高性能的系统，那么外键就显得很臃肿了。很多人在更在意系统的性能的时候都不会使用外键，而是通过应用程序来维护。
+- 存储过程：
+    MySQL本身实现了存储过程，触发器，存储函数和事件，老实说，这些特性并没有什么特别的e。而且对于基于语句的复制还有很多问题。通常，使用这些特性可以帮你节省很多的网络开销。
+- 绑定变量：
+    当查询语句的解析和执行计划生成消耗了主要的时间，那么绑定变量可以在一定程度上解决问题。因为只需要解析一次，对于大量重复类型的查询语句，性能会有很大的提高。另外，执行计划的缓存和传输使用的二进制协议，这都使得绑定变量的方式比普通Sql语句执行的方式要快。
+- 字符集：
+    字符集是一种字节到字符之间的映射，而校对规则是指一个字符集的排序方法。
+- 查询缓存：
+    完全相同的查询在重复执行的时候，查询缓存可以立即返回结果，而无需在数据库中重新执行一次。根据我们的经验，在高并发压力环境中查询缓存会导致系统性能的人下降，甚至僵死。如果你一定要使用查询缓存，那么不要设置太大内存，而且只有在明确收益的时候才使用。那该如何判断是否应该使用查询缓存呢？建议使用Percona Server，观察更细致的日志，并作一些简单的计算。还可以查看缓存命令率，  inserts 和 select 比率或者命中和写入比率。查询缓存是一个非常方便的缓存，对应用程序完全透明，无需任何额外的编码，但是如果希望更高的缓存效率，我们建议使用memcached或者其他类似的解决方案。
