--- a/笔记/图解TCP-IP/3.数据链路.md
+++ b/笔记/图解TCP-IP/3.数据链路.md
@@ -37,13 +37,29 @@ MAC地址长 `48比特` ， 结构如图：
 
 - 争用方式：
     争用方式（Contention）是指争夺数据传输的权利，也叫CSMA。这种方法通常另网络中的各个站采用先到先得的方式占用信道发送数据，如果多个站同时发送帧，则会产生冲突，也因此会导致网络拥堵与性能下降。
+    ![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1627952258_20210803083826467_148453307.png)
     在一部分以太网中，采用了改良的CSMA的另一种方式-CSMA/CD方式。要求每个站提前检查冲突，一旦发生冲突，则尽早释放信道。其具体工作原理如下：
     - 如果载波信道上没有数据流动，则任何站都可以发送数据
     - 检查是否发生冲突，一旦发生冲突时，放弃发送数据，同时立即释放载波信道。
     - 放弃发送以后，随机延时一段时间，再重新争用介质，重新发送帧。
+    ![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1627952259_20210803083939742_1826216582.png)
 - 令牌传递方式
     令牌传递方式是沿着令牌环发送一种叫做“令牌”的特殊报文，是控制传输的一种方式。只有获得令牌的站才能发送数据。这种方式有两个特点：一是不会有冲突，二是每个站都有通过平等循环获得令牌的机会。因此即使网络拥堵也不会导致性能下降。
+    ![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1627952260_20210803084047063_1385810750.png)
 
 ### 非共享介质网络
 非共享介质网络是指不共享介质，是对介质采取专用的一种传输控制方式。在这种方式下，网络中每个站直连交换机，由交换机负责转发数据帧。此方式下，发送端与接收端并不共享通信介质，因此很多情况下采用全双工通信方式。
+![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1627952260_20210803084207574_1861123535.png)
 
+> #### 半双工与全双工通信
+> 半双工是至只发送或只接收的通信方式。它类似于无线电收发器，如两端同时说话，是听不见对方说的话的。
+> 而全双工不同，它允许在同一时间既可以发送数据也可以接收数据。类似于电话，接打双方可以同时说话。
+
+### 根据MAC地址转发
+在使用同轴电缆的以太网等介质共享网络中，同一时间只能有一台主机发送数据，当联网的主机数量增加时，通信性能就会明显下降。若将集线器或集中器等设备以星型连接，就出现了一款新的网络设备-`交换集线器`，这是一种将非介质共享型网络中的交换机用在以太网中的技术，交换集线器也叫做以太网交换机。
+
+以太网交换机就是持有多个端口的网桥，他们根据数据链路层中的每个帧的目标MAC地址，决定从哪个网络接口发送数据。这时所参考的，用以记录发送接口的表就叫做转发表。
+
+### 环路监测技术
+#### 生成树方式
+#### 源路由方式
