--- a/笔记/图解TCP-IP/5.IP协议相关技术.md
+++ b/笔记/图解TCP-IP/5.IP协议相关技术.md
@@ -83,3 +83,40 @@ ICMP通知消息会使用IP进行发送。
 ICMP的消息大致分为两类：一类是通知出错原因的错误消息。另一类是用于诊断的查询消息。
 
 ### 主要的ICMP消息
+#### ICMP目标不可达消息
+#### ICMP重定向消息
+#### ICMP超时消息
+#### ICMP回送消息
+
+## DHCP
+为了实现自动设置IP，统一管理IP地址分配，就产生了DHCP协议。
+![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1629005586_20210815122336546_1214883969.png)
+
+### DHCP的工作机制
+![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1629005587_20210815122535341_180635323.png)
+
+为了避免一台DHCP服务器遇到故障，将导致无法自动分配IP地址，一般会架设两台或两台以上的DHCP服务器。但这样也会导致几处分配的IP 地址相互冲突。
+
+### DHCP中继代理
+家庭网络大多数只有一个以太网的网段，与其连接的主机数不会太多，因此只需要一台DHCP服务器即可满足地址分配任务。大多数情况下，都由路由器充当这个DHCP的角色。
+
+但在一些大型网络，比如公司或学校中，由于接入的机器数目庞大，需要将DHCP统一管理，可以使用DHCP中继代理来实现。
+
+![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1629005587_20210815123035102_664069713.png)
+
+客户端会向DHCP中继代理发送DHCP请求包，而DHCP中继代理在收到这个广播包以后再以单播的形式发送给DHCP服务器。服务器收到该包以后再向DHCP中继代理返回应答，并由中继代理将此包转发给客户端。由此，DHCP服务器即使不在同一个链路上也可以实现统一分配和管理IP地址。
+
+
+## NAT
+NAT是用于在本地网络中使用私有地址，在连接互联网时转而使用全局IP地址的技术。
+除转换IP地址以外，还出现了TCP，UDP端口号的NAPT技术，由此可以实现用一个全局IP地址与多个主机的通信。
+
+### NAT的工作机制
+![](https://img-vnote-1251075307.cos.ap-beijing.myqcloud.com/1629005587_20210815124619901_1968201101.png)
+
+### NAT的潜在问题
+1. 无法从NAT的外部向内部服务建立连接
+2. 转换表的生成与转换操作都会产生一定的开销
+3. 通信过程中一旦NAT遇到异常需要重启，所有的TCP连接都将被重置
+4. 即使备置两台NAT做容灾备份，TCP连接还是会断开
+
